--- a/public/button.html
+++ b/public/button.html
@@ -28,7 +28,7 @@
           <input class="w-full bg-white placeholder:font-italitc border border-slate-300 rounded-full py-2 pl-10 pr-4 focus:outline-none" placeholder="Enter your keyword to search" type="text" />
         </label>
 
-        <h1 class="text-3xl font-semibold mb-3">Select box</h1>
+        <h1 class="text-3xl font-semibold mb-3">Icon on right side</h1>
 
         <label class="relative block cursor-pointer">
           <span class="absolute inset-y-0 right-0 flex items-center pr-3">
@@ -36,7 +36,7 @@
               <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
             </svg>
           </span>
-          <input class="w-full bg-white placeholder:font-italitc border border-slate-300 rounded-lg py-2 pr-10 pl-4 focus:outline-none cursor-pointer" placeholder="Select" type="text" readonly />
+          <input class="w-full bg-white placeholder:font-italitc border border-slate-300 rounded-lg py-2 pr-10 pl-4 focus:outline-none" placeholder="Type your name" type="text" />
         </label>
       </div>
     </div>
