add responsive navbar

--- a/public/button.html
+++ b/public/button.html
@@ -38,6 +38,10 @@
           </span>
           <input class="w-full bg-white placeholder:font-italitc border border-slate-300 rounded-lg py-2 pr-10 pl-4 focus:outline-none" placeholder="Type your name" type="text" />
         </label>
+
+        <div class="text-center">
+          <a href="/" class="text-indigo-600 hover:underline">Home page</a>
+        </div>
       </div>
     </div>
     `
