--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,12 @@
         <h1 class="text-3xl font-semibold mb-3">Hello world!</h1>
         <p>TailwindCSS, Rapidly build modern websites without ever leaving your HTML.</p>
         <p>A utility-first CSS framework packed with classes like flex, pt-4, text-center and rotate-90 that can be composed to build any design, directly in your markup.</p>
+
+        <p>Here are some examples</p>
+        <ul class="list-disc pl-5">
+          <li><a href="button.html" class="text-indigo-600 hover:underline">Button with icon</a></li>
+          <li><a href="navbar.html" class="text-indigo-600 hover:underline">Responsive navbar</a></li>
+        </ul>
       </div>
     </div>
     `
