--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,10 @@
         <ul class="list-disc pl-5">
           <li><a href="button.html" class="text-indigo-600 hover:underline">Button with icon</a></li>
           <li><a href="navbar.html" class="text-indigo-600 hover:underline">Responsive navbar</a></li>
+          <li><a href="login.html" class="text-indigo-600 hover:underline">Login form</a></li>
+          <li><a href="register.html" class="text-indigo-600 hover:underline">Register form</a></li>
         </ul>
       </div>
     </div>
-    `
   </body>
 </html>
