--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
           <li><a href="navbar.html" class="text-indigo-600 hover:underline">Responsive navbar</a></li>
           <li><a href="login.html" class="text-indigo-600 hover:underline">Login form</a></li>
           <li><a href="register.html" class="text-indigo-600 hover:underline">Register form</a></li>
+          <li><a href="table.html" class="text-indigo-600 hover:underline">Table</a></li>
         </ul>
       </div>
     </div>
