--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <body class="w-full font-sans bg-slate-100">
     <div class="max-w-screen-md mx-auto h-screen flex items-center justify-center">
       <div class="bg-white p-10 w-full rounded-xl space-y-7">
-        <h1 class="text-3xl font-semibold mb-3">Hello world!</h1>
+        <h1 class="text-3xl font-semibold mb-3">Tailwind CSS</h1>
         <p>TailwindCSS, Rapidly build modern websites without ever leaving your HTML.</p>
         <p>A utility-first CSS framework packed with classes like flex, pt-4, text-center and rotate-90 that can be composed to build any design, directly in your markup.</p>
 
